# jgb

./: .gdbinit  CMakeLists.txt  LICENSE  README  README.test  config.cpp  config.h  config_factory.cpp  config_factory.h  debug.h  error.h  helper.cpp  helper.h  install.cpp  main.c  rebuild  test-config.cpp  test.json  update.json
conf/test-01/: logbuf.json  module.json  read_buffer.json  service.json  template_app.json  test-data-2.json  test.json  test_core.json  write_buffer.json  write_buffer_x3.json
conf/test-02/: module.json
include/: CMakeLists.txt  app-callback.h  app.h  buffer.h  config.h  config_factory.h  constrains.h  core.h  debug.h  error.h  helper.h  log.h  schema.h
misc/: CMakeLists.txt  check_u32_context.h  logfile.cpp  read-buffer.cpp  service.cpp  write-buffer.cpp  write_32u_context.h
scripts/: rebuild
src/: CMakeLists.txt  app.cpp  buffer.cpp  config.cpp  config_factory.cpp  core.cpp  helper.cpp  install.cpp  log-buf.cpp  log.cpp  main.c  main.cpp  module.cpp  schema.cpp
test/: .gdbinit  CMakeLists.txt  app_template.cpp  exit-app.cpp  get_dev_info.json  leak-app.cpp  logfile.json  module.json  read_buffer.json  service.json  test-bind.json  test-buffer.cpp  test-config.cpp  test-core.cpp  test-cpp.cpp  test-data-1.json  test-data-2.json  test-data.schema  test-log.cpp  test-loop-fail.cpp  test-no-loops.cpp  test-run.cpp  test-setup-fail-multiple.cpp  test-setup-fail.cpp  test-single-worker.cpp  test-task-buffer.cpp  test-task-read-buffer.cpp  test-task-write-buffer.cpp  test.json  test_task_buffer.json  update.json  write-buffer-x3.cpp  write_32u_context.h  write_buffer.json
